--- a/Results/log.html
+++ b/Results/log.html
@@ -1735,25 +1735,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,308],[[4,5,4,0,[],[1,18,288],[[1,6,7,0,[],[1,20,285],[],[[8,0,1,0,[],[1,302,2],[[0,9,10,0,11,12,0,0,[1,303,1],[],[]]]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,259],[],[[4,0,1,0,[],[1,257,1],[[0,5,6,0,7,8,0,0,[1,258,0],[],[]]]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*IRobot","*C:\\Users\\jimmy\\eclipse-workspace\\IRobot","*.","*Tests","*C:\\Users\\jimmy\\eclipse-workspace\\IRobot\\Tests","*C:\\Users\\jimmy\\eclipse-workspace\\IRobot\\Tests\\IRobot.robot","*Tests/IRobot.robot","*Message","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Hello Boss il est 5h!"]);
+window.output["strings"] = window.output["strings"].concat(["*","*IRobot","*C:\\Users\\jimmy\\eclipse-workspace\\IRobot\\IRobot.robot","*../IRobot.robot","*Message","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Hello Boss il est 5h!"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"IRobot","name":"IRobot","pass":1},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"IRobot.Tests","name":"Tests","pass":1},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1","label":"IRobot.Tests.IRobot","name":"IRobot","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"IRobot","name":"IRobot","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1566098603815;
+window.output["baseMillis"] = 1566100073020;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 329;
+window.output["generated"] = 266;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
